put jumbotron in container to keep entire site uniform, fixed issue where navbar would appear over the social media bar when scrolling past it, reduced font size of navbar brand on mobile sized screens as current size was pushing toggle onto a second line

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,12 +20,14 @@ body{
     border-radius: 0;
     padding-top: 56px;
     padding-bottom: 56px;
+    letter-spacing: 1;
 }
 
 
 /* --------------------Navbar------------------- */
 .navbar-dark{
     background-color: rgb(41, 0, 53);
+    z-index: 1;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -80,7 +82,7 @@ body{
 /*----------------------- */
 
 .display-Title {
-    font-size: 3.5rem;
+    font-size: 3.2rem;
     font-weight: 600;
     line-height: 1.2;
 }
@@ -102,6 +104,11 @@ body{
     }
 }
 
+@media(max-width:380px){
+    .navbar-brand{
+        font-size: 1rem;
+    }
+}
 
 /* -----------------------Social Mdeia Bar------------------------ */
 /* https://www.w3schools.com/howto/howto_css_sticky_social_bar.asp */
@@ -113,7 +120,7 @@ body{
     -ms-transform: translateY(-50%);
     transform: translateY(-50%); */
     padding: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .icon-bar a {
